2006-04-05 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b22

 * Fix: ImageMap was opened was popup when no icons are used.

 * Change: Removed obsolete function showChoice()

2006-04-05 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b21

 * Fix: Frame around movies in photo view was broken.

2006-04-04 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b20

 * Fix: Use gTranslate instead of _( in albums.php, view_album.php and view_photo.php

2006-04-04 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b19

 * Change: Make select boxes in watermark form to stay at the value selected before a preview.
   Thanks to ejolley from forum.
   Change done as 1.5.3-cvs-b8 in HEAD


 * Change: Added icons for rotate and flip.

 * Change: Layout of rotate_photo.php.
   Thanks to Volksport.
   Change done as 1.5.3-cvs-b5 in HEAD

 * Fix: Language Mode 2 (Browserlanguage) was broken.
   
2006-03-28 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b18

 * SECURITY FIX *

  It was possible to use/"inject" Javascript inside various places to abuse this as a XSS Exploit.

  Now every userinput got from $_REQUEST is sanitized.
  We use the PEAR packages HTML_Safe and XML_HTMLSax3 to do this.
  Nice benefit is that HTML is now again possible in captions, titles, etc.

  The Team would like to thank Aditya Mooley for catching and reporting this.
  And giving us the time to fix it before going to public.

  Aditya Mooley is member of the Coppermine-Gallery Development team.
  So have a look at http://coppermine.sf.net, the page of our friendly competittion application.

2006-03-27 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b17

 * Fix: In some dropdown boxes the wrong items is selected.
	Appears e.g. in slideshow in IE where "blend" should be selected, but acutally
	"RANDOM" is.

	Thanks to Yuan from forums.

2006-03-27 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b16

 * Fix: When Gallery runs in joomla the complete framework is loaded into the
	progressbar when uploading pictures.

2006-03-27 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b15
